Apply code simplifications